<resources>
    <string name="app_name">book-review-app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Auth strings -->
    <string name="auth_signin_text">Sign In</string>
    <string name="auth_signup_text">Sign Up</string>
    <string name="auth_email_hint">Email</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_signin_button_text">SIGN IN</string>
    <string name="auth_signup_button_text">SIGN UP</string>
</resources>